# growth-hacking-kit

./: .gitignore  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_README.md  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  pyproject.toml  release_notes.md
.blogkit/memory/: constitution.md
.blogkit/scripts/bash/: create-new-feature.sh
.blogkit/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
.blogkit/templates/: blog-post-template.md  plan-template.md  spec-template.md  tasks-template.md
.blogkit/templates/commands/: blogkit.analyze.md  blogkit.checklist.md  blogkit.clarify.md  blogkit.constitution.md  blogkit.implement.md  blogkit.plan.md  blogkit.specify.md  blogkit.tasks.md  blogkit.taskstoissues.md
.github/workflows/: ci.yml  release-OLD-TWO-JOB.yml  release.yml  release.yml.backup  test-build.yml  tests.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
.growthkit/memory/: constitution.md
.growthkit/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-agent-commands.sh  setup-plan.sh  update-agent-context.sh
.growthkit/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-agent-commands.ps1  setup-plan.ps1  update-agent-context.ps1
.growthkit/templates/: plan-template.md  tasks-template.md
.growthkit/templates/commands/: growthkit-constitution.md  growthkit-implement.md  growthkit-plan.md  growthkit-specify.md  growthkit-tasks.md
.specify/memory/: constitution.md
docs/: API.md  TROUBLESHOOTING.md  templates.md
refs/: 0_overview.md  1_principles_for_constitution.md  2_define_for_specify.md  3_project_mangement_for_plan.md  4_pm_tasking_for_tasks.md  6_claude_code.md
scripts/: build-templates.sh  test-cli-enhancements.sh  test-e2e.sh  test-validation.sh  validate-templates.sh
scripts_blogkit/: build-templates.sh  test-auto-release.sh  test-release-bugs.sh  validate-templates.sh
specs/001-growth-hacking-kit/: plan.md  spec.md  tasks.md
specs/001-growth-hacking-kit/checklists/: requirements.md
specs/004-growthkit-auto-release/: IMPLEMENTATION_SUMMARY.md  spec.md  tasks.md
specs/004-growthkit-auto-release/checklists/: requirements.md
specs/004-growthkit-auto-template-release/: plan.md  spec.md  tasks.md
specs/004-growthkit-auto-template-release/checklists/: requirements.md
src/growthkit/: __init__.py  __main__.py
src/growthkit/cli/: __init__.py  config.py  implement.py  main.py  plan.py  specify.py  tasks.py  utils.py
src/growthkit/constitution/: __init__.py  gates.py  validator.py
src/growthkit/research/: __init__.py  platforms.py
src/growthkit_cli/: __init__.py  main.py  utils.py
tests/: __init__.py  conftest.py  test_implement.py  test_init.py  test_integration.py  test_plan.py  test_specify.py  test_tasks.py  test_validator.py
workflows_blogkit/: release.yml
workflows_blogkit/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
(+14 files in other folders)
