[project]
name = "growthkit-cli"
version = "0.0.96"
description = "Growth Hacking Kit - Spec-driven growth campaign management for AI SaaS products"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Frank", email = "frank@agentii.ai"}
]
keywords = ["growth-hacking", "ai-saas", "campaign-management", "spec-driven", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
growthkit = "growthkit.cli.main:app"

[project.urls]
Homepage = "https://github.com/agentii/growth-hacking-kit"
Repository = "https://github.com/agentii/growth-hacking-kit"
Issues = "https://github.com/agentii/growth-hacking-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/growthkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
